Fixed centering on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,6 @@ body {
   text-align: center;
 }
 
-@media (max-width: 460px) {
-  #main-id {
-    align-items: start;
-  }
-}
-
 .nav-link {
   color: white;
   font-size: 1.5em;
@@ -73,7 +67,7 @@ body {
 
 @media (max-width: 460px) {
   .main {
-    margin: 0 30px 0 30px;
+    grid-template-columns: 1fr 5fr 1fr;
   }
 }
 
@@ -124,8 +118,8 @@ h1 {
 
 @media (max-width: 412px) {
   .mainPhoto {
-    width: auto;
-    height: 200px;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -286,9 +280,7 @@ h1 {
 .eventInfo h2 {
   font-size: 2em;
 }
-/* .bottom-info {
-  color: white;
-} */
+
 .registry-container {
   display: grid;
   grid-column: span 3;
